cmake_minimum_required(VERSION 2.8)
project(DisplayLib)
option(Graphic "enables graphic display using sdl2" ON)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
if (Graphic)
    add_library(DisplayLib SHARED Display.cpp Display.h)
else ()
    add_library(DisplayLib SHARED DisplayConsole.cpp Display.h)
endif ()
target_link_libraries(DisplayLib ${SDL2_LIBRARIES})


project(ProjetConcurrent)
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp Cell.cpp Cell.h)
add_executable(ProjetConcurrent ${SOURCE_FILES})
target_link_libraries(ProjetConcurrent pthread DisplayLib)
