cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
project(DisplayLib)
option(Graphic "enables graphic display using sdl2" OFF)
if (Graphic)
    find_package(SDL2 REQUIRED)
    include_directories(${SDL2_INCLUDE_DIRS})
    add_library(DisplayLib SHARED Display.cpp Display.h)
else ()
    add_library(DisplayLib SHARED NoDisplay.cpp Display.h)
endif ()
target_link_libraries(DisplayLib ${SDL2_LIBRARIES})
project(ProjetConcurrent)
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp main.h LockableCell.cpp LockableCell.h Cell.cpp Cell.h threads/Person.cpp threads/Person.h threads/Threading.h Point.cpp Point.h threads/OptimistPerson.cpp threads/OptimistPerson.h)
add_executable(ProjetConcurrent ${SOURCE_FILES})
target_link_libraries(ProjetConcurrent pthread DisplayLib)
